--- a/style.css
+++ b/style.css
@@ -9,5 +9,5 @@ body{
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: blue;
+    background-color: red;
 }
